# auto_vibe

./: .env  .env.example  .gitignore  API.md  CONTRIBUTING.md  LICENSE  README.md  REPORT_RU.md  hello.py  opencode.json  pyproject.toml  run_autovibe_test.py  test_config.yaml  test_error.py
auto_vibe/: __init__.py  context_manager.py  git_manager.py  project_analyzer.py  sandbox.py  sandbox_hardened.py  server.py  tdd_loop.py  test_generator.py
auto_vibe/agents/: __init__.py  architect.py  canvas_runtime.py  council.py  executor.py  loop_controller.py  loop_spec.py  orchestrator.py  planner.py  verifier.py  worker.py
auto_vibe/config/: __init__.py  settings.py
auto_vibe/core/: __init__.py  analyzer.py  executor.py  fixer.py  loop.py
auto_vibe/cost/: __init__.py  calculator.py
auto_vibe/dashboard/: __init__.py  app.py
auto_vibe/environment/: __init__.py  manager.py  shadow.py  terminals.py
auto_vibe/git/: __init__.py  checkout.py  commits.py
auto_vibe/integrations/: __init__.py  hallucination_guard.py  llm.py  web_search.py
auto_vibe/logger/: __init__.py
auto_vibe/memory/: __init__.py  vault.py
auto_vibe/mesh/: __init__.py  manager.py  node.py
auto_vibe/network/: __init__.py  reconnect.py  resolver.py  socket_provider.py
auto_vibe/retrieval/: __init__.py  cursorignore.py  grep_client.py  indexer.py
auto_vibe/security/: __init__.py  approval.py  auto_review.py  permissions.py
auto_vibe/strategies/: __init__.py  (+1 more)
tests/: test_basic.py  test_context_manager.py  test_git_manager.py  test_loop.py  test_project_analyzer.py  test_sandbox.py
