[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-vibe"
version = "0.1.0"
description = "MCP server for autonomous developer - write->run->catch->analyze->fix->repeat"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=13.0",
    "flask>=3.0",
    "flask-socketio>=5.0",
    "aiofiles>=24.0",
    "duckduckgo-search>=7.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4.0",
]

[project.scripts]
auto-vibe = "auto_vibe.server:main"
